<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="menu_authenticator">Authenticator</string>
    <string name="action_bar_title_authenticator">Authenticator</string>
    <string name="action_bar_title_authenticator_edit">Edit</string>
    <string name="authenticator_item_edit_available">Not set up</string>
    <string name="authenticator_item_edit_activate_action">Set up</string>
    <string name="authenticator_item_edit_activate_title">2-factor authentication code</string>
    <string name="authenticator_item_edit_activated_title">2-factor authentication (2FA)</string>
    <string name="authenticator_item_edit_remove_action">Remove</string>

    <string name="authenticator_item_edit_remove_popup_title">Wait, are you sure?</string>
    <string name="authenticator_item_edit_remove_popup_body">Before you remove 2FA in Dashlane, you must turn off 2FA in your %1$s settings.\n\nIf you don\'t, %1$s will ask for 6-digit tokens to log in that you will no longer be able to generate.</string>
    <string name="authenticator_item_edit_remove_popup_positive_button">Yes, remove 2FA</string>
    <string name="authenticator_item_edit_remove_popup_negative_button">Cancel</string>

    <string name="authenticator_intro_title">Set up 2FA for %1$s</string>
    <string name="authenticator_intro_title_unknown">Set up 2FA</string>
    <string name="authenticator_intro_body">1. Go to the security settings of the 3rd-party site or app you want to add\n\n2. Turn on 2FA (some sites may call this 2-step verification)\n\n3. Scan the QR code or enter the setup code they provide</string>
    <string name="authenticator_intro_positive_button">Scan QR Code</string>
    <string name="authenticator_intro_neutral_button">Enter setup code</string>
    <string name="authenticator_intro_learn_more_link">Learn more about 2FA</string>

    <string name="authenticator_qr_code_scan_header">Scan QR code from %1$s</string>
    <string name="authenticator_qr_code_scan_header_unknown">Scan QR code</string>

    <string name="authenticator_default_account_name">this account</string>

    <string name="authenticator_success_intro_title">You\'ve set up 2FA for %1$s</string>
    <string name="authenticator_success_intro_body">We’ll generate the 6-digit tokens you need to log in.</string>
    <string name="authenticator_success_intro_positive_button">OK, got it</string>

    <string name="authenticator_error_intro_title">We couldn’t set up 2FA for %1$s</string>
    <string name="authenticator_error_intro_body">Please try again. If you continue to have issues, contact Support.</string>
    <string name="authenticator_error_intro_positive_button">Try again</string>
    <string name="authenticator_error_intro_negative_button">Cancel</string>
    
    <string name="authenticator_error_dashlane_domain_message">Your Dashlane Password Manager app cannot be used as a mobile authenticator app for your Dashlane account.</string>
    
    <string name="authenticator_error_dashlane_domain_button">Ok, got it</string>

    <string name="authenticator_enter_activation_key_title">Enter setup code from %1$s</string>
    <string name="authenticator_enter_activation_key_input_hint">Enter setup code</string>
    <string name="authenticator_enter_activation_key_input_label">Setup code</string>
    <string name="authenticator_enter_activation_key_positive_button">Next</string>

    <string name="authenticator_faq_title">Frequently asked questions</string>
    <string name="authenticator_faq_question_1_title">What is the Authenticator?</string>
    <string name="authenticator_faq_question_2_title">What is 2FA for?</string>
    <string name="authenticator_faq_question_3_title">I need help</string>
    <string name="authenticator_faq_question_1_body">It generates 6-digit tokens every time you log in to an app or site you’ve set up 2FA for.</string>
    <string name="authenticator_faq_question_2_body">Setting up 2FA for your services adds an extra layer of security by asking to authenticate with a second factor in order to log in.</string>
    <string name="authenticator_faq_question_3_body">If you need more help, visit our Help Center or contact our Support team.</string>
    <string name="authenticator_faq_question_1_button">Learn more about 2FA</string>
    <string name="authenticator_faq_question_2_button">Learn more</string>
    <string name="authenticator_faq_question_3_button">Help center</string>

    <string name="authenticator_empty_screen_title">No 2FA-compatible logins</string>
    <string name="authenticator_empty_screen_body">Logins that support 2FA will be listed here.</string>
    <string name="authenticator_empty_screen_add_button">Add new login</string>
    <string name="authenticator_empty_screen_setup_button">Add 2FA token</string>

    <string name="authenticator_empty_screen_all_setup_title">2FA set up for all compatible logins</string>
    <string name="authenticator_empty_screen_all_setup_body">Nice work — you’ve reinforced all compatible logins with 2FA. Add more logins to see if they’re 2FA compatible.</string>
    <string name="authenticator_empty_screen_all_setup_add_button">Add login</string>

    <string name="authenticator_dashboard_title">2FA tokens</string>
    <string name="authenticator_dashboard_setup_button">Add 2FA token</string>
    <string name="authenticator_dashboard_explore_button">Explore Authenticator</string>
    <string name="and_accessibility_authenticator_dashboard_edit_button">Edit</string>

    <string name="authenticator_suggestions_title">2FA-compatible logins</string>
    <string name="authenticator_suggestions_setup_button">Add 2FA token</string>
    <string name="authenticator_see_all">See all</string>
    <string name="authenticator_see_less">See less</string>

    <string name="authenticator_get_started_dialog_title">Now available: 2FA for Dashlane</string>
    <string name="authenticator_get_started_dialog_body">2-factor authentication (2FA) is an extra layer of security for your account. When logging in or adding a new device, we’ll ask you to enter a 6-digit token from your authenticator app.</string>
    <string name="authenticator_get_started_dialog_button">Get started</string>
    <string name="authenticator_get_started_animation_continue">Continue</string>
    <string name="authenticator_get_started_animation_login">Login</string>

    <string name="authenticator_notification_center_title">Now available: 2FA for Dashlane</string>
    <string name="authenticator_notification_center_body">2-factor authentication (2FA) is an extra layer of security for your account. When logging in or adding a new device, we’ll ask you to enter a 6-digit token from your authenticator app.</string>

    <string name="authenticator_multiple_matches_title">%1$d %2$s accounts available</string>
    <string name="authenticator_multiple_matches_subtitle">Select the account you want to set up 2FA for.</string>
</resources>
