<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/authenticator_empty_screen_add_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_huge"
        android:text="@string/authenticator_empty_screen_add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authenticator_empty_screen_body" />

    <Button
        android:id="@+id/authenticator_empty_screen_setup_button"
        style="?borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/authenticator_empty_screen_setup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authenticator_empty_screen_add_button" />

    <ImageView
        android:id="@+id/authenticator_empty_screen_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_authenticator"
        app:tint="@color/text_brand_quiet" />

    <TextView
        android:id="@+id/authenticator_empty_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_huge"
        android:text="@string/authenticator_empty_screen_title"
        android:textAppearance="?textAppearanceHeadline2"
        android:textColor="@color/text_neutral_catchy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authenticator_empty_screen_logo" />

    <TextView
        android:id="@+id/authenticator_empty_screen_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/authenticator_empty_screen_body"
        android:textAppearance="?textAppearanceBody1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authenticator_empty_screen_title" />
</androidx.constraintlayout.widget.ConstraintLayout>