<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:animateLayoutChanges="true"
        android:maxWidth="@dimen/size_480dp"
        android:paddingBottom="16dp">

        <Button
            android:id="@+id/authenticator_dashboard_setup_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_big"
            android:text="@string/authenticator_dashboard_setup_button"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:layout_marginStart="@dimen/spacing_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authenticator_dashboard_container" />

        <Button
            android:id="@+id/authenticator_dashboard_explore_button"
            style="?borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/authenticator_dashboard_explore_button"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:layout_marginStart="@dimen/spacing_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authenticator_dashboard_setup_button" />

        <ImageButton
            android:id="@+id/authenticator_dashboard_edit_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            android:padding="12dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/and_accessibility_authenticator_dashboard_edit_button"
            android:scaleType="fitXY"
            android:src="@drawable/ic_authenticator_edit_button"
            app:layout_constraintBottom_toBottomOf="@+id/authenticator_dashboard_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/text_brand_standard"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            android:id="@+id/authenticator_dashboard_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:layout_marginStart="@dimen/spacing_normal"
            android:background="@drawable/authenticator_list_background"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authenticator_dashboard_title">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/authenticator_dashboard_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small"
                android:nestedScrollingEnabled="false"
                tools:itemCount="5"
                tools:listitem="@layout/authenticator_credential_item_otp" />

            <Button
                android:id="@+id/authenticator_dashboard_see_all"
                style="?borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/authenticator_see_all" />
        </LinearLayout>

        <TextView
            android:id="@+id/authenticator_dashboard_title"
            style="?textAppearanceHeadline1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_big"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:layout_marginStart="@dimen/spacing_normal"
            android:text="@string/authenticator_dashboard_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>