<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Dashlane"
        android:padding="@dimen/spacing_normal">

        <Button
            android:id="@+id/authenticator_get_started_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_big"
            android:text="@string/authenticator_get_started_dialog_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authenticator_get_started_text" />

        <ImageView
            android:id="@+id/handle"
            android:layout_width="52dp"
            android:layout_height="5dp"
            android:src="@drawable/handle_round_rectangle_shape"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/authenticator_get_started_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/authenticator_get_started_dialog_body"
            android:textAppearance="?textAppearanceSubtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authenticator_get_started_title" />

        <TextView
            android:id="@+id/authenticator_get_started_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:text="@string/authenticator_get_started_dialog_title"
            android:textAppearance="?textAppearanceHeadline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/handle" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/authenticator_get_started_logo"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_marginTop="@dimen/spacing_huge"
            android:scaleType="fitStart"
            android:visibility="visible"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:lottie_autoPlay="true"
            app:lottie_enableMergePathsForKitKatAndAbove="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/lottie_authenticator_onboarding" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>